# ee_extra

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  README.rst  SECURITY.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/scripts/: update_awesome_spectral_indices.py  update_ee_appshot.py  update_ee_token.py  update_gee_stac_ids.py  update_gee_stac_scale_offset.py
.github/workflows/: update_awesome_spectral_indices.yml  update_ee_appshot.yml  update_gee_stac_ids.yml  update_gee_stac_scale_offset.yml
docker/: README.md
docs/: conf.py  docs-requirements.txt  index.rst
docs/.ipynb_checkpoints/: conf-checkpoint.py  docs-requirements-checkpoint.txt
docs/modules/: Algorithms.rst  Image.rst  ImageCollection.rst  JavaScript.rst  QA.rst  STAC.rst  Spectral.rst  TimeSeries.rst  image_basic.rst  index.rst  javascript_eejs2py.rst
docs/modules/stubs/: ee_extra.Image.basic.maxvalue.rst  ee_extra.Image.basic.minvalue.rst  ee_extra.ImageCollection.core.closest.rst  ee_extra.JavaScript.eejs2py.evaluate.rst  ee_extra.JavaScript.eejs2py.install.rst  ee_extra.JavaScript.eejs2py.junction.rst  ee_extra.JavaScript.eejs2py.require.rst  ee_extra.JavaScript.eejs2py.uninstall.rst  ee_extra.STAC.core.getCitation.rst  ee_extra.STAC.core.getDOI.rst  ee_extra.STAC.core.getOffsetParams.rst  ee_extra.STAC.core.getSTAC.rst  ee_extra.STAC.core.getScaleParams.rst  ee_extra.STAC.core.scaleAndOffset.rst  ee_extra.STAC.getCitation.rst  ee_extra.STAC.getDOI.rst  ee_extra.STAC.getOffsetParams.rst  ee_extra.STAC.getSTAC.rst  (+6 more)
ee_extra/: STAC.py  __init__.py  __main__.py  utils.py
ee_extra/.ipynb_checkpoints/: __init__-checkpoint.py
ee_extra/Algorithms/: core.py  panSharpening.py  river.py
ee_extra/Apps/: core.py  utils.py
ee_extra/Image/: basic.py
ee_extra/ImageCollection/: core.py
ee_extra/JavaScript/: __init__.py  eejs2py.py  install.py  main.py  merge.py  reindent.py  translate_functions.py  translate_general.py  translate_jsm_extra.py  translate_jsm_main.py  translate_jsm_wrappers.py  translate_loops.py  translate_main.py  translate_specialfunctions.py  translate_strings.py  translate_utils.py  utils.py  utils_func.py  utils_general.py  utils_loops.py
ee_extra/QA/: clouds.py  metrics.py  pipelines.py
ee_extra/STAC/: core.py  utils.py
ee_extra/Spectral/: core.py  utils.py
ee_extra/TimeSeries/: core.py
ee_extra/data/: ee-appshot.json  ee-catalog-ids.json
ee_extra/image/: __init__.py  basic.py
ee_extra/spectral/: core.py  utils.py
tests/: test_Algorithms.py  test_Apps.py  test_ImageCollection.py  test_QA.py  test_STAC.py  test_Spectral.py  test_TimeSeries.py  test_translate.py  test_translate01.py  test_translate02.py  test_translate_andrea_01.py  test_translate_fer.py
tests/onefile/: Landsat_LST.js  test_01.js  test_02.js  test_03.js  test_04.js  test_05.js  test_08.js
tests/test_example/: test_hello.py
(+18 files in other folders)
